09-correct-fields/09-correct-fields.html

--- a/09-correct-fields/09-correct-fields.html
+++ b/09-correct-fields/09-correct-fields.html
@@ -111,22 +111,22 @@
               <li><input type="radio" name="option" value="bananas" checked required><label>Bananas</label></li>
               <li><input type="radio" name="option" value="grapes" checked required><label>Grapes</label></li>
               <li><input type="radio" name="option" value="plums" checked required><label>Plums</label></li>
-            </ul>
+            </ul>g
           <!--
             The server is expecting one of the following values for `fruit`:
           -->
         </fieldset>
         <fieldset>
           <legend>Large list of values</legend>
-          <select name="birds">
-            <option value="ducks">Ducks</option>
-            <option value="eagles">Eagles</option>
-            <option value="herons">Herons</option>
-            <option value="gulls">Gulls</option>
-            <option value="pigeons">Pigeons</option>
-            <option value="ravens">Ravens</option>
-            <option value="robins">Robins</option>
-            <option value="swallows">Swallows</option>
+          <select name="bird">
+            <option value="duck">Ducks</option>
+            <option value="eagle">Eagles</option>
+            <option value="heron">Herons</option>
+            <option value="gull">Gulls</option>
+            <option value="pigeon">Pigeons</option>
+            <option value="raven">Ravens</option>
+            <option value="robin">Robins</option>
+            <option value="swallow">Swallows</option>
           </select>
           <!--
             The server is expecting one of the following values for `birds`:
@@ -156,14 +156,14 @@
         <fieldset>
           <legend>Large list of values</legend>
             <ul>
-              <li><input type="checkbox" name="ducks" value="Ducks"/>Ducks</li>
-              <li><input type="checkbox" name="eagles" value="Eagles"/>Eagles</li>
-              <li><input type="checkbox" name="herons" value="Herons"/>Herons</li>
-              <li><input type="checkbox" name="gulls" value="Gulls"/>Gulls</li>
-              <li><input type="checkbox" name="pigeons" value="Pigeons"/>Pigeons</li>
-              <li><input type="checkbox" name="ravens" value="Ravens"/>Ravens</li>
-              <li><input type="checkbox" name="robins" value="Robins"/>Robins</li>
-              <li><input type="checkbox" name="swallows" value="Swallows"/>Swallows</li>
+              <li><input type="checkbox" name="duck" value="Ducks"/>Ducks</li>
+              <li><input type="checkbox" name="eagle" value="Eagles"/>Eagles</li>
+              <li><input type="checkbox" name="heron" value="Herons"/>Herons</li>
+              <li><input type="checkbox" name="gull" value="Gulls"/>Gulls</li>
+              <li><input type="checkbox" name="pigeon" value="Pigeons"/>Pigeons</li>
+              <li><input type="checkbox" name="raven" value="Ravens"/>Ravens</li>
+              <li><input type="checkbox" name="robin" value="Robins"/>Robins</li>
+              <li><input type="checkbox" name="swallow" value="Swallows"/>Swallows</li>
             </ul>
           <!--
             The server is expecting one or more of the following values for `birds`:
