--- a/11-inline-markup/11-inline-markup.html
+++ b/11-inline-markup/11-inline-markup.html
@@ -35,53 +35,63 @@
 
       <!-- What do 'H' and 'O' mean here? -->
       <p>
-        <p>Testing <sub>subscript text</sub></p>
-    <p>Testing <sup>superscript text</sup></p>
         The elements H and O, bond as H20, or water (as it is colloquaially known).
+
       </p>
 
       <hr>
 
       <!-- Sometimes we just want to make something look a certain way -->
-      <p>
-        Editor's Notes:<br>
-
-        Please use CTRL+B to bold this word: Critical<br>
-        <b>Critical<br></b>
-        Please use CTRL+I to italicise this word: Doubtful<br>
-
-        Please underline this word: Thinking<br>
-        Please put a line through this word: Assuming<br>
-
-        Please show that the word 'slow' was removed, and 'quick' added in its place in the following sentence:
-        "The slow brown fox jumped over the lazy dog."<br>
-      </p>
-
+      <ul>
+        <li>
+          Editor's Notes:<br>
+          Please use CTRL+B to bold this word: Critical<br>
+          <b>Critical<br></b>
+        </li>
+        <li>
+          Please use CTRL+I to italicise this word: Doubtful<br>
+        <i>Doubtful<br></i>
+        </li>
+        <li>
+          Please underline this word: Thinking<br>
+          <p style="text-decoration: underline;">Thinking</p>
+        </li>
+        <li>
+          Please put a line through this word: <s>Assuming<br></s>
+        </li>
+        <li>
+          Please show that the word 'slow' was removed, and 'quick' added in its place in the following sentence:
+          "The slow brown fox jumped over the lazy dog."<br>
+        </li>
+      </ul>
       <hr>
-
       <!-- We can do the same with samples of code, even maintaining the whitespace: -->
-      <p>
-        "Woah! 'that' was unexpected!" exclaimed Keith.<br>
-        Curiously, Jesse looked at the output on Keith's screen and it said:<br>
+      <ul>
+        <li>
+          "Woah!'that' was unexpected!" exclaimed Keith.<br>
+          Curiously, Jesse looked at the output on Keith's screen and it said:<br>
 
           Unexpected value for argument 'that'
             - in function clickHandler, line 12
             - called from function anonymous, line 34
-      </p>
-
+        </li>
+      </ul>
       <hr>
 
       <!-- We can add helpful markup to highlight words -->
-      <p>
-        Your search term: 'Helicopter' was found in the following documents:
-      </p>
+      <ul>
+        <li>
+          Your search term: 'Helicopter' was found in the following documents:
+        </li>
+      </ul>
       <ul>
         <li>
           <a href="#bell-222">Bell 222</a>:<br>
           The Model 222 is a helicopter made by the Bell Helicopter Corporation.
         </li>
       </ul>
-
     </main>
   </body>
 </html>
+<h1>Heading</h1>
+      <p style="text-decoration: underline;">This text will be underlined.</p>
