11-inline-markup/11-inline-markup.html

--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -263,6 +263,16 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;mark&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;mark&gt;</code> tag
+          <p>
+
+          </p>
+        </dd>
+        <dt>
           <code>&lt;meta&gt;</code>
         </dt>
         <dd>
