05-all-elements/05-all-elements.html

--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -269,7 +269,11 @@
           <p>
             The <code>&lt;mark&gt;</code> tag
           <p>
-
+            The HTML <code>&lt;mark&gt;</code> tag is used for indicating text as marked or highlighted for reference purposes, due to its relevance in another context.
+          </p>
+          <p>
+            The mark tag is supported in all major browsers. Use the mark tag if you want to highlight parts of your text.
+            This tag must have opening and closing mark tag.
           </p>
         </dd>
         <dt>
@@ -314,6 +318,17 @@
           </p>
           <p>
             Browsers automatically add some space (margin) before and after each P element. The margins can be modified with CSS (with the margin properties).
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;s&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;s&gt;</code> element is used to identify text that is no longer accurate or relevant.
+          </p>
+          <p>
+            It is similar to, but semantically distinct from, the del element which is used to identify document edits. By default, browsers render the contents of an s element with a strikethrough.
           </p>
         </dd>
         <dt>
