--- a/08-log-in-form/08-log-in-form.html
+++ b/08-log-in-form/08-log-in-form.html
@@ -26,14 +26,14 @@
       <form action="/log-in" method="POST">
         <p>
           <label>
-            Username <br>
-            <input type="text" id="username" name="username" required>
+            Email address<br>
+            <input type="email" name="email-address" required>
           </label>
         </p>
         <p>
-          <label for="password">
+          <label>
             Password <br>
-            <input type="password" id="password" name="password" required>
+            <input type="password" name="password" required>
           </label>
         </p>
         <p>
