11-inline-markup/11-inline-markup.html

--- a/11-inline-markup/11-inline-markup.html
+++ b/11-inline-markup/11-inline-markup.html
@@ -66,11 +66,15 @@
         </li>
         <li>
           Please underline this word: Thinking<br>
-          <u>Thinking<br></u>
+          <u>
+            Thinking<br>
+          </u>
         </li>
         <li>
           Please put a line through this word: Assuming<br>
-          <del>Assuming<br></del>
+          <del>
+            Assuming<br>
+          </del>
         </li>
         <li>
           Please show that the word 'slow' was removed, and 'quick' added in its place in the following sentence:
@@ -80,7 +84,7 @@
       <hr>
       <!-- We can do the same with samples of code, even maintaining the whitespace: -->
       <p>
-          <q><em>Woah!</em><code>that</code> was unexpected!</q> exclaimed Keith.<br>
+          <q><em>Woah!</em> <code>that</code> was unexpected!</q> exclaimed Keith.<br>
           Curiously, Jesse looked at the output on Keith's screen and it said:<br>
 <pre>
 Unexpected value for argument <code>that</code>
