05-all-elements/05-all-elements.html

--- a/05-all-elements/05-all-elements.html
+++ b/05-all-elements/05-all-elements.html
@@ -102,6 +102,23 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;del&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;del&gt;</code> defines text that has been deleted from a document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;dfn&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;dfn&gt;</code> The <dfn> tag represents the defining instance of a term in HTML.
+              The defining instance is often the first use of a term in a document.
+          </p>
+        </dd>
+        <dt>
           <code>&lt;div&gt;</code>
         </dt>
         <dd>
@@ -113,6 +130,39 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;dt&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;dt&gt;</code> tag is used to to define a term/name in a description list.
+          </p>
+          <p>
+            The dt tag is used in conjunction with dl (defines a description list) and dd (describes each term/name).
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;em&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;em&gt;</code> tag is used in a phrase to render as emphasized text.
+          </p>
+          <p>
+            This tag is not deprecated, but it is possible to achieve richer effect with CSS.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;fieldset&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;fieldset&gt;</code> tag is used to group related elements in a form.
+          </p>
+          <p>
+            The fieldset tag draws a box around the related elements.
+          </p>
+        </dd>
+        <dt>
           <code>&lt;footer&gt;</code>
         </dt>
         <dd>
@@ -121,6 +171,17 @@
           </p>
           <p>
             A footer element should contain information about its containing element. A footer element typically contains: ... copyright information. contact information.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;form&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;form&gt;</code> tag is used to create an HTML form for user input.
+          </p>
+          <p>
+            The <form> element can contain one or more of the following form elements:input, textarea, button, select, option, optgroup, fieldset, label, output
           </p>
         </dd>
         <dt>
@@ -230,6 +291,25 @@
             The <code>&lt;img&gt;</code> tag defines an image in an HTML page. The img tag has two required attributes: src and alt.
           </p>
         </dd>
+        <dt>
+          <code>&lt;ins&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;ins&gt;</code> tag defines a text that has been inserted into a document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;kbd&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;kbd&gt;</code> tag is a phrase tag and It defines keyboard input.
+          </p>
+          <p>
+            This tag is not deprecated, but it is possible to achieve richer effect with CSS.
+          </p>
+        </dd>
          <dt>
           <code>&lt;li&gt;</code>
         </dt>
@@ -250,6 +330,14 @@
           </p>
           <p>
             Links are found on almost every webpage and provide a simple means of navigating between pages on the web. Links can be attached to text, images, or other HTML elements.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;legend&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            A <code>&lt;legend&gt;</code> tag defines a caption for the <fieldset> element.
           </p>
         </dd>
         <dt>
@@ -310,6 +398,17 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;optgroup&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;optgroup&gt;</code> tag is used to group related options in a drop-down list.
+          </p>
+          <p>
+            If you have a long list of options, groups of related options are easier to handle for a user.
+          </p>
+        </dd>
+        <dt>
           <code>&lt;p&gt;</code>
         </dt>
         <dd>
@@ -321,6 +420,25 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;pre&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;pre&gt;</code> element represents preformatted text which is to be presented exactly as written in the HTML file.
+          </p>
+          <p>
+            The text is typically rendered using a non-proportional ("monospace") font. Whitespace inside this element is displayed as written.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;q&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;q&gt;</code> tag defines a short quotation.
+          </p>
+        </dd>
+        <dt>
           <code>&lt;s&gt;</code>
         </dt>
         <dd>
@@ -329,6 +447,14 @@
           </p>
           <p>
             It is similar to, but semantically distinct from, the del element which is used to identify document edits. By default, browsers render the contents of an s element with a strikethrough.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;samp&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;samp&gt;</code> tag is a phrase tag and it defines sample output from a computer program.
           </p>
         </dd>
         <dt>
@@ -351,14 +477,30 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;small&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;small&gt;</code> tag defines smaller text (and other side comments).
+          </p>
+        </dd>
+        <dt>
           <code>&lt;strong&gt;</code>
         </dt>
         <dd>
           <p>
-            When writing in HTML, the strong tag is an inline element used to designate a section of text with strong importance; it is usually denoted with bold font.
+            When writing in HTML, the <code>&lt;strong&gt;</code> tag is an inline element used to designate a section of text with strong importance; it is usually denoted with bold font.
           </p>
           <p>
             This element is unique in that it is a phrase tag, which indicates that a section of text has structural meaning.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;strike&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The HTML <code>&lt;strike&gt;</code> element (or HTML Strikethrough Element) places a strikethrough (horizontal line) over text.
           </p>
         </dd>
         <dt>
@@ -373,6 +515,28 @@
           </p>
         </dd>
         <dt>
+          <code>&lt;svg&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The  <code>&lt;svg&gt;</code> element is a container that defines a new coordinate system and viewport.
+          </p>
+          <p>
+            It is used as the outermost element of SVG documents, but it can also be used to embed a SVG fragment inside an SVG or HTML document.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;sub&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;sub&gt;</code> defines subscript text; Subscript text appears half a character below the normal line, and is sometimes rendered in a smaller font.
+          </p>
+          <p>
+            Subscript text can be used for chemical formulas, like H2O.
+          </p>
+        </dd>
+        <dt>
           <code>&lt;summary&gt;</code>
         </dt>
         <dd>
@@ -381,6 +545,17 @@
           </p>
           <p>
             The heading can be clicked to view/hide the details.
+          </p>
+        </dd>
+        <dt>
+          <code>&lt;sup&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;sup&gt;</code> tag defines superscript text; Superscript text appears half a character above the normal line, and is sometimes rendered in a smaller font.
+          </p>
+          <p>
+            Superscript text can be used for footnotes, like WWW[1].
           </p>
         </dd>
         <dt>
@@ -460,6 +635,13 @@
             The cells inside it are defined using the th (a header cell) or the td (a standard cell).
           </p>
         </dd>
+        <dt>
+          <code>&lt;u&gt;</code>
+        </dt>
+        <dd>
+          <p>
+            The <code>&lt;u&gt;</code> element is used to underlined a word or a text.
+          </p>
         <dt>
           <code>&lt;ul&gt;</code>
         </dt>
