09-correct-fields/09-correct-fields.html

--- a/09-correct-fields/09-correct-fields.html
+++ b/09-correct-fields/09-correct-fields.html
@@ -51,7 +51,7 @@
         </fieldset>
         <fieldset>
           <legend>Website</legend>
-          <input type="url" name="website"required>
+          <input type="url" name="website" required>
           <!-- The server is expecting the user's `website` address here. -->
         </fieldset>
         <fieldset>
@@ -119,14 +119,14 @@
         <fieldset>
           <legend>Large list of values</legend>
           <select name="birds">
-            <option value="duck">Ducks</option required>
-            <option value="eagle">Eagles</option required>
-            <option value="heron">Herons</option required>
-            <option value="gull">Gulls</option required>
-            <option value="pigeon">Pigeons</option required>
-            <option value="raven">Ravens</option required>
-            <option value="robin">Robins</option required>
-            <option value="swallow">Swallows</option required>
+            <option value="duck">Ducks</option>
+            <option value="eagle">Eagles</option>
+            <option value="heron">Herons</option>
+            <option value="gull">Gulls</option>
+            <option value="pigeon">Pigeons</option>
+            <option value="raven">Ravens</option>
+            <option value="robin">Robins</option>
+            <option value="swallow">Swallows</option>
           </select>
           <!--
             The server is expecting one of the following values for `birds`:
